--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Log in to Docker Hub 
         uses: docker/login-action@v1
-        with:
+        secrets:
           username: ${{ secret.DOCKERHUB_USERNAME }}
           password: ${{ secret.DOCKERHUB_TOCKEN }}
 
