--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,17 +8,13 @@ on:
    # branches:
     #  - main
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code 
-        uses: Actions/checkout@v2
-
+  call-workflow: 
+  
       - name: Log in to Docker Hub 
         uses: docker/login-action@v1
         secrets:
-          username: ${{ secret.DOCKERHUB_USERNAME }}
-          password: ${{ secret.DOCKERHUB_TOCKEN }}
+          username: "${{ secret.DOCKERHUB_USERNAME }}"
+          password: "${{ secret.DOCKERHUB_TOCKEN }}"
 
       - name: Build and push Docker image 
         env:
