--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,25 +1,28 @@
-name: GitHub Actions Demo
-#run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Build and Push Docker Image
+
 on:
   push:
-    branches:
-      - main
-  #pull_request:
-   # branches:
-    #  - main
-jobs:
-  call-workflow: 
-  
-      - name: Log in to Docker Hub 
-        uses: docker/login-action@v1
-        secrets:
-          username: "${{ secret.DOCKERHUB_USERNAME }}"
-          password: "${{ secret.DOCKERHUB_TOCKEN }}"
+    branches: [main]
+ 
 
-      - name: Build and push Docker image 
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
         env:
-          REPOSITORY: ci-cd 
+          REPOSITORY: ci_cd
           IMAGE_TAG: latest
         run: |
-          docker build -t ${{ secret.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG .
-          docker push ${{ secret.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG 
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG
