--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,28 +3,35 @@ name: Build and Push Docker Image
 on:
   push:
     branches: [main]
- 
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
+      # Enable Debugging for more verbose output
+      - name: Enable Debugging
+        run: echo "ACTIONS_STEP_DEBUG=true" >> $GITHUB_ENV
+
+      # Checkout the repository code
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Log in to Docker Hub using secrets for username and token (password)
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          #username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ vars.DOCKERHUB_TOKEN2 }}
-          #password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}  # Make sure this secret is set correctly in GitHub
+          password: ${{ secrets.DOCKERHUB_TOKEN }}     # Make sure this secret is set correctly in GitHub
 
+      # Build and push the Docker image
       - name: Build and push Docker image
         env:
           REPOSITORY: ci_cd
           IMAGE_TAG: latest
         run: |
+          echo "Building the Docker image"
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG .
+          
+          echo "Pushing the Docker image"
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:$IMAGE_TAG
